extern/Hexapod/win_32/hxp_drivers.bas


Declare Function TCP_ConnectToServer Lib "HXP_drivers.dll" (ByVal Ip_Address As String, ByVal Ip_Port As Long, ByVal TimeOut As Double) As Long
Declare Sub TCP_SetTimeout Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Timeout As Double)
Declare Sub TCP_CloseSocket Lib "HXP_drivers.dll" (ByVal SocketIndex As Long)
Declare Function TCP_GetError Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As String
Declare Function GetLibraryVersion Lib "HXP_drivers.dll" () As String
Declare Function ControllerMotionKernelTimeLoadGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, CPUTotalLoadRatio As Double, CPUCorrectorLoadRatio As Double, CPUProfilerLoadRatio As Double, CPUServitudesLoadRatio As Double) As Integer '  Get controller motion kernel time load
Declare Function ElapsedTimeGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ElapsedTime As Double) As Integer '  Return elapsed time from controller power on
Declare Function ErrorStringGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ErrorCode As Integer, ByVal ErrorString As String) As Integer '  Return the error string corresponding to the error code
Declare Function FirmwareVersionGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Version As String) As Integer '  Return firmware version
Declare Function TCLScriptExecute Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TCLFileName As String, ByVal TaskName As String, ByVal ParametersList As String) As Integer '  Execute a TCL script from a TCL file
Declare Function TCLScriptExecuteAndWait Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TCLFileName As String, ByVal TaskName As String, ByVal InputParametersList As String, ByVal OutputParametersList As String) As Integer '  Execute a TCL script from a TCL file and wait the end of execution to return
Declare Function TCLScriptKill Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TaskName As String) As Integer '  Kill TCL Task
Declare Function TCLScriptKillAll Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Kill all TCL Tasks
Declare Function TimerGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TimerName As String, FrequencyTicks As Integer) As Integer '  Get a timer
Declare Function TimerSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TimerName As String, ByVal FrequencyTicks As Integer) As Integer '  Set a timer
Declare Function Reboot Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Reboot the controller
Declare Function Login Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Name As String, ByVal Password As String) As Integer '  Log in
Declare Function CloseAllOtherSockets Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Close all socket beside the one used to send this command
Declare Function EventAdd Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String, ByVal ActionName As String, ByVal ActionParameter1 As String, ByVal ActionParameter2 As String, ByVal ActionParameter3 As String) As Integer '  ** OBSOLETE ** Add an event
Declare Function EventGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventsAndActionsList As String) As Integer '  ** OBSOLETE ** Read events and actions list
Declare Function EventRemove Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String) As Integer '  ** OBSOLETE ** Delete an event
Declare Function EventWait Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal EventName As String, ByVal EventParameter As String) As Integer '  ** OBSOLETE ** Wait an event
Declare Function EventExtendedConfigurationTriggerSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal ExtendedEventNameList As String, ByVal EventParameter1 As String, ByVal EventParameter2 As String, ByVal EventParameter3 As String, ByVal EventParameter4 As String) As Integer '  Configure one or several events
Declare Function EventExtendedConfigurationTriggerGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal EventTriggerConfiguration As String) As Integer '  Read the event configuration
Declare Function EventExtendedConfigurationActionSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal ExtendedActionNameList As String, ByVal ActionParameter1 As String, ByVal ActionParameter2 As String, ByVal ActionParameter3 As String, ByVal ActionParameter4 As String) As Integer '  Configure one or several actions
Declare Function EventExtendedConfigurationActionGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ActionConfiguration As String) As Integer '  Read the action configuration
Declare Function EventExtendedStart Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ID As Integer) As Integer '  Launch the last event and action configuration and return an ID
Declare Function EventExtendedAllGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal EventActionConfigurations As String) As Integer '  Read all event and action configurations
Declare Function EventExtendedGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ID As Integer, ByVal EventTriggerConfiguration As String, ByVal ActionConfiguration As String) As Integer '  Read the event and action configuration defined by ID
Declare Function EventExtendedRemove Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal ID As Integer) As Integer '  Remove the event and action configuration defined by ID
Declare Function EventExtendedWait Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Wait events from the last event configuration
Declare Function GatheringConfigurationGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TypeName As String) As Integer '  Read different mnemonique type
Declare Function GatheringConfigurationSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal TypeNameList As String) As Integer '  Configuration acquisition
Declare Function GatheringCurrentNumberGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, CurrentNumber As Integer, MaximumSamplesNumber As Integer) As Integer '  Maximum number of samples and current number during acquisition
Declare Function GatheringStopAndSave Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Stop acquisition and save data
Declare Function GatheringDataAcquire Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Acquire a configured data
Declare Function GatheringDataGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal IndexPoint As Integer, ByVal DataBufferLine As String) As Integer '  Get a data line from gathering buffer
Declare Function GatheringDataMultipleLinesGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal IndexPoint As Integer, ByVal NumberOfLines As Integer, ByVal DataBufferLine As String) As Integer '  Get multiple data lines from gathering buffer
Declare Function GatheringReset Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Empty the gathered data in memory to start new gathering from scratch
Declare Function GatheringRun Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal DataNumber As Integer, ByVal Divisor As Integer) As Integer '  Start a new gathering
Declare Function GatheringStop Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Stop the data gathering (without saving to file)
Declare Function GatheringExternalConfigurationSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal TypeNameList As String) As Integer '  Configuration acquisition
Declare Function GatheringExternalConfigurationGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal TypeName As String) As Integer '  Read different mnemonique type
Declare Function GatheringExternalCurrentNumberGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, CurrentNumber As Integer, MaximumSamplesNumber As Integer) As Integer '  Maximum number of samples and current number during acquisition
Declare Function GatheringExternalStopAndSave Lib "HXP_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Stop acquisition and save data
Declare Function GlobalArrayGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Integer, ByVal ValueString As String) As Integer '  Get global array value
Declare Function GlobalArraySet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Integer, ByVal ValueString As String) As Integer '  Set global array value
Declare Function DoubleGlobalArrayGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Integer, DoubleValue As Double) As Integer '  Get double global array value
Declare Function DoubleGlobalArraySet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal Number As Integer, ByVal DoubleValue As Double) As Integer '  Set double global array value
Declare Function GPIOAnalogGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogValue As Double) As Integer '  Read analog input or analog output for one or few input
Declare Function GPIOAnalogSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogOutputValue As Double) As Integer '  Set analog output for one or few output
Declare Function GPIOAnalogGainGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogInputGainValue As Integer) As Integer '  Read analog input gain (1, 2, 4 or 8) for one or few input
Declare Function GPIOAnalogGainSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal NbElements As Long, ByVal GPIONameList As String, AnalogInputGainValue As Integer) As Integer '  Set analog input gain (1, 2, 4 or 8) for one or few input
Declare Function GPIODigitalGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GPIOName As String, DigitalValue As UShort) As Integer '  Read digital output or digital input 
Declare Function GPIODigitalSet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GPIOName As String, ByVal Mask As UShort, ByVal DigitalOutputValue As UShort) As Integer '  Set Digital Output for one or few output TTL
Declare Function GroupCorrectorOutputGet Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, CorrectorOutput As Double) As Integer '  Return corrector outputs
Declare Function GroupHomeSearch Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Start home search sequence
Declare Function GroupHomeSearchAndRelativeMove Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal NbElements As Long, TargetDisplacement As Double) As Integer '  Start home search sequence and execute a displacement
Declare Function GroupReadyAtPosition Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String, ByVal EncoderPosition1 As Double, ByVal EncoderPosition2 As Double, ByVal EncoderPosition3 As Double, ByVal EncoderPosition4 As Double, ByVal EncoderPosition5 As Double, ByVal EncoderPosition6 As Double) As Integer '  Go to READY state with the users positions (hexapod group)
Declare Function GroupInitialize Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Start the initialization
Declare Function GroupInitializeWithEncoderCalibration Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Start the initialization with encoder calibration
Declare Function GroupKill Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Kill the group
Declare Function GroupMoveAbort Lib "HXP_drivers.dll" (ByVal SocketIndex As Long, ByVal GroupName As String) As Integer '  Abort a move
